--- a/rb_customer.html
+++ b/rb_customer.html
@@ -7,7 +7,7 @@
       Review Assignment
 
       Red Ball Pizza Customer Information
-      Author: 
+      Author: Adrian soliz
       Date:   
 
       Filename:   rb_customer.html
@@ -19,6 +19,9 @@
    <title>Red Ball Pizza Customer Form</title>
    <link href="rb_base.css" rel="stylesheet" />
    <link href="rb_styles2.css" rel="stylesheet" />
+   <link rel="stylesheet" href="rb_forms2.css"/>
+   <link rel="stylesheet" href="rb_validate.css">
+   <script src="rb_formsubmit2.js"></script>
 </head>
 
 <body>
@@ -47,7 +50,38 @@
          
          
    </section>
+   <form action="http://www.example.com/redball/customer" method="POST"> 
+      <div>
+         <label for="nameBox">Name*</label>
+         <input type="text" id="nameBox" name="custName" placeholder="First and Last Name" required /> 
+      </div>
+      <div>
+         <label for="phoneBox">Phone*</label>
+               <input type="tel" required name="custPhone" id="phoneBox" placeholder="(nnn)-nnn-nnn"
+               pattern="^\d{10}$|^(\(\d{3}\)\s*)?\d{3}[\s-]?\d{4}$"/>
+      </div>
+      <div>
+         <input type="radio" checked name="orderType" id="delivery">
+         <label for="delivery">Delivery</label>
+         <input type="radio" name="orderType" id="pickup">
+         <label for="pickup">Pickup</label>
+      </div>
+      <fieldset id="deliveryInfo">
+         <legend>Delivery Options </legend>
+         <textarea name="delAddress" id="addressBox" placeholder="Enter delivery Address"></textarea>
+         <label for="delBox">Delivery Time (Leave blank For Earliest Delivery)</label>
+         <input type="time" name="delTime" id="delBox">
+      </fieldset>
+      <fieldset id="pickupInfo">
+         <legend>Pickup Options</legend>
+         <label for="pickupBox">Pickup Time (Leave blank For Earliest Pickup)</label>
+         <input type="time" disabled name="pickupTime" id="pickupBox">
+         </fieldset>
+         <div>
+            <input type="submit" value="Begin Building Your Order"/>
+         </div>
 
+   </form>
    <footer>
       <h1>ORDER</h1>
       <a href="#">Specials</a> <a href="#">Pizza</a> <a href="#">Pasta</a> <a href="#">Wings</a> <a href="#">Sides</a> <a href="#">Salads</a> <a href="#">Drinks</a> <a href="#">Desserts</a>
